--- a/APIWeb/appsettings.Development.json
+++ b/APIWeb/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApiWebContext": "Server=(localdb)\\mssqllocaldb;Database=ApiWebContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
