--- a/APIWeb/appsettings.json
+++ b/APIWeb/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApiWebContext": "Server=(localdb)\\mssqllocaldb;Database=ApiWebContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
